--- a/menu_template.html
+++ b/menu_template.html
@@ -10,9 +10,11 @@
 </head>
 <body class="container bg-space">
     <header> 
-        <figure class="logo"><img src="img/logo_edup.svg" alt="Logo Edup"/></figure>
+        <figure class="logo">
+            <img src="img/logo_edup.svg" alt="Logo Edup"/>
+        </figure>
         <form class="search">
-            <input type="search" name="pesquisar"/>
+            <input type="search" placeholder="Buscar" name="pesquisar"/>
             <button></button>
         </form>
         <nav class="menu">
@@ -21,7 +23,7 @@
             <a href="#">Sobre</a>
         </nav>
         <section class="acesso">
-            <button class="sigin">Login</button>
+            <a class="sigin">Login</a>
             <button class="signup">Cadastre-se</button>
         </section>
     </header>
