--- a/sobrenos.html
+++ b/sobrenos.html
@@ -52,7 +52,7 @@
               <div class="col-sm">
                 <article class="nome"> 
                     <img src="./img/bia.jpeg" alt="" width="150x150" style="border-radius: 100px;"></br>
-                    <p class="p1">Beatriz Araujo</p>
+                    <p class="p1">Beatriz Araújo</p>
                     <p class="p2">Dev Full Stack/TI </br>(JPI)</p>
                     <div>
                         <a href="https://www.facebook.com/beatriz.araujo.39142072/"><img src="./img/facebook .svg" alt="" width="20x20"></a>
