--- a/rodape.html
+++ b/rodape.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Rodapé</title>
+    <link rel="icon" href="img/logo_up.svg"/> 
     <link rel="stylesheet" href="./css/reset.css"/>
     <link rel="stylesheet" href="./css/rodape.css"/>
 </head>
 <body>
     <footer class="rodape bg-space">
         <section class="rodape-top">
-            <figure class="logo">
+            <figure class="info-footer">
+                <div class="logo">
                 <img src="./img/edup.svg" alt="Logo"/>
-            </figure>
-
-            <figure class="social-list">
-                <img src="./img/face.svg" alt="Social">
-                <img src="./img/twitter.svg" alt="Social">
-                <img src="./img/in.svg" alt="Social">
+                </div>
+                <div class="icons">
+                    <img src="./img/face.svg" alt="Social">
+                    <img src="./img/twitter.svg" alt="Social">
+                    <img src="./img/in.svg" alt="Social">
+                </div>
             </figure>
         </section>
         <section class="copyright">
