--- a/rodape.html
+++ b/rodape.html
@@ -11,21 +11,17 @@
 </head>
 <body>
     <footer class="rodape bg-space">
-        <section class="rodape-top">
-            <figure class="info-footer">
-                <div class="logo">
-                <img src="./img/edup.svg" alt="Logo"/>
-                </div>
-                <div class="icons">
-                    <img src="./img/face.svg" alt="Social">
-                    <img src="./img/twitter.svg" alt="Social">
-                    <img src="./img/in.svg" alt="Social">
-                </div>
-            </figure>
-        </section>
-        <section class="copyright">
+        <figure class="logo">
+            <img src="./img/edup.svg" alt="Logo"/>
+        </figure>
+        <div class="copyright">
             <p><span>©</span> EdUp 2020 Todos os direitos reservados.</p>
-        </section>
+        </div>
+        <figure class="social-icons">   
+            <img src="./img/face.svg" alt="Social">
+            <img src="./img/twitter.svg" alt="Social">
+            <img src="./img/in.svg" alt="Social">
+        </figure>
     </footer>
 </body>
 </html>
