Páginas de teste do acesso a API do André

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <figure class="logo-up">
         <img src="img/logo_up.svg"/>
     </figure>    
-    <form class="login">
+    <form class="login" action="http://127.0.0.1:3333/login" method="POST">
         <input type="email" name="email" placeholder="E-mail" required/>
         <input type="password" name="password" placeholder="Senha" required/>
         <div class="recovery">
