Adiciona algumas rotas

--- a/formAluno.html
+++ b/formAluno.html
@@ -16,7 +16,7 @@
               <p class="active-step-number">1</p>
             </div>
             <div class="step-info">
-              <p>Autenticação</p>
+              <p>Dados Pessoais</p>
             </div>
         </div>
         <div class="step">
@@ -55,14 +55,14 @@
     <form class="container">
       <section class="cadastro">
         <div class="titulo">
-            <h2>1. Autenticação</h2>
+            <h2>1. Dados Pessoais</h2>
         </div>
     <div class="input-group">
       <input type="text" name="" placeholder="Nome civil" class="long"/>
-      <input type="text" name="" placeholder="Nome civil" class="long"/>
+      <input type="text" name="" placeholder="Nome Social" class="long"/>
         <div class="input-p">
-            <input type="text" name="" placeholder="Nome civil" class="long"/>
-            <input type="text" name="" placeholder="Nome civil" class="long"/>
+            <input type="text" name="" placeholder="RG" class="long"/>
+            <input type="date" name="" placeholder="Data de Nascimento" class="long"/>
         </div>    
         <div class="input-btn">
           <input type="submit" name="" value="Avançar"/>
