--- a/menu_template.html
+++ b/menu_template.html
@@ -18,12 +18,12 @@
             <button></button>
         </form>
         <nav class="menu">
-            <a href="#">Home</a>
-            <a href="#">Cursos</a>
-            <a href="#">Sobre</a>
+            <a href="/index.html">Home</a>
+            <a href="/pagina_cursos.html">Cursos</a>
+            <a href="/sobrenos.html">Sobre</a>
         </nav>
         <section class="acesso">
-            <a class="sigin">Login</a>
+            <a class="sigin" href="login.html">Login</a>
             <button class="signup">Cadastre-se</button>
         </section>
     </header>
