--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <button></button>
         </form>
         <nav class="menu">
-            <a href="/index.html">Home</a>
-            <a href="/pagina_cursos.html">Cursos</a>
-            <a href="/sobrenos.html">Sobre</a>
+            <a href="#">Home</a>
+            <a href="#">Cursos</a>
+            <a href="#">Sobre</a>
         </nav>
         <section class="acesso">
             <a class="sigin">Login</a>
