--- a/crudEmpresa.html
+++ b/crudEmpresa.html
@@ -15,7 +15,7 @@
                 <a href="#"><img src="/img/config.svg" alt="Config"/></a> 
             </section>
             <figure class="foto-usuario">
-                <img src="img/user.svg" alt="Foto do Usuário"/>
+                <img src="/img/user.svg" alt="Foto do Usuário"/>
             </figure>
             <section class="info"> 
                 <p class="nome-aluno">Usuário EdUp</p>
