--- a/formEmpresa.html
+++ b/formEmpresa.html
@@ -77,7 +77,12 @@
     <input type="text" name="nomeEmpresa" placeholder="Nome da Empresa" required/>
   <div class="input-p">
     <input type="text" name="cnpj" placeholder="CNPJ" required/>
-    <input type="text" name="paisSede" placeholder="País Sede" required></input>
+    <select id="paisSede" name="paisSede" required>
+    <option value="">Option</option>
+    <option value="">Option</option>
+    <option value="">Option</option>
+    
+  </select>
 </div>
 <input type="text" name="razaoSocial" placeholder="Razão Social" required/>
 <div class="input-btn-group">
