--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>EdUp</title>
     <link rel="icon" href="img/logo_up.svg"/> 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css"/>
-    <link rel="stylesheet" href="css/home.css"/>
-    <link rel="stylesheet" href="css/menu_template.css"/>
+    <link rel="stylesheet" href="/css/reset.css"/>
+    <link rel="stylesheet" href="/css/home.css"/>
+    <link rel="stylesheet" href="/css/menu_template.css"/>
 </head>
 <body class="container bg-space">
     <header> 
         <figure class="logo">
-            <img src="img/logo_edup.svg" alt="Logo Edup"/>
+            <img src="/img/logo_edup.svg" alt="Logo Edup"/>
         </figure>
         <form class="search">
             <input type="search" placeholder="Buscar" name="pesquisar"/>
@@ -76,7 +76,7 @@
     </div>
    </section>
    <section class="preview">
-        <h2><span>O que </span>oferecemos:</h2>
+        <h2>O que <span>oferecemos:</span></h2>
         <div class="card-list">
             <div class="card-curso">
                 <img src="/img/fundo-curso.png" alt="curso"/>
