--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login EdUp</title>
+    <link rel="icon" href="img/logo_up.svg"/> 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/login.css"/>
@@ -11,7 +12,7 @@
 <body class="container bg-space">
     
     <figure class="logo-up">
-        <img src="img/logo_up.svg"/>
+        <img src="/img/logo_up.svg"/>
     </figure>    
     <form class="login">
         <input type="email" name="email" placeholder="E-mail" required/>
