--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <button></button>
         </form>
         <nav class="menu">
-            <a href="#">Home</a>
-            <a href="#">Cursos</a>
-            <a href="#">Sobre</a>
+            <a href="/index.html">Home</a>
+            <a href="/cursos.html">Cursos</a>
+            <a href="/sobrenos.html">Sobre</a>
         </nav>
         <section class="acesso">
-            <a class="sigin">Login</a>
+            <a href="/login.html" class="sigin">Login</a>
             <button class="signup">Cadastre-se</button>
         </section>
     </header>
@@ -35,8 +35,8 @@
             <h1>Inicie sua jornada <span>conosco.</span></h1>
             </div>
             <div class="button-group">
-                <button class="button-aluno">Aluno</button>
-                <button class="button-empresa">Empresa</button>               
+                <a href="/formAluno.html"><button class="button-aluno">Aluno</button></a>
+                <a href="/formEmpresa.html"><button class="button-empresa">Empresa</button></a>
             </div>
             <figure class="descer"><a href="#how"><img src="./img/down.svg" alt="Ir para baixo"/></a>   </figure>
         </section>
@@ -52,7 +52,7 @@
                 <div class="circle">
                     <img src="/img/step1.svg" alt="Icon"/>
                 </div>
-                <p>1.<a href="#">Cadastre-se</a></p>    
+                <p>1.<a href="/formAluno.html">Cadastre-se</a></p>    
             </div>
             <figure class="right-arrow">
                 <img src="/img/arrow_right.svg" alt="Próximo"/>
@@ -61,7 +61,7 @@
                 <div class="circle">
                     <img src="/img/step2.svg" alt="Icon"/>
                 </div>
-                <p>2.<a href="#">Escolha</a> um curso</p>    
+                <p>2.<a href="/cursos.html">Escolha</a> um curso</p>    
             </div>
             <figure class="right-arrow">
                 <img src="/img/arrow_right.svg" alt="Próximo"/>
@@ -110,7 +110,7 @@
             </div>
             
         </div>
-        <button class="btn-link">Ver mais</button>
+        <a href="/cursos.html"><button class="btn-link">Ver mais</button></a>
    </section>
    <!-------------Footer------------>
 </body>
