Estado na apresentação de segunda

--- a/client/index.html
+++ b/client/index.html
@@ -20,12 +20,12 @@
             <button></button>
         </form>
         <nav class="menu">
-            <a href="/index">Home</a>
-            <a href="/cursos">Cursos</a>
-            <a href="/sobrenos">Sobre</a>
+            <a href="/index.html">Home</a>
+            <a href="/cursos.html">Cursos</a>
+            <a href="/sobrenos.html">Sobre</a>
         </nav>
         <section class="acesso">
-            <a href="/login" class="sigin">Login</a>
+            <a href="/login.html" class="sigin">Login</a>
             <button class="signup">Cadastre-se</button>
         </section>
     </header>
@@ -35,8 +35,8 @@
             <h1>Inicie sua jornada <span>conosco.</span></h1>
             </div>
             <div class="button-group">
-                <a href="/formAluno"><button class="button-aluno">Aluno</button></a>
-                <a href="/formEmpresa"><button class="button-empresa">Empresa</button></a>
+                <a href="/formAluno.html"><button class="button-aluno">Aluno</button></a>
+                <a href="/formEmpresa.html"><button class="button-empresa">Empresa</button></a>
             </div>
             <figure class="descer"><a href="#how"><img src="./img/down.svg" alt="Ir para baixo"/></a>   </figure>
         </section>
