--- a/client/perfilEmpresa.html
+++ b/client/perfilEmpresa.html
@@ -16,7 +16,7 @@
 
         </div>
         <figure class="foto">
-            <img src="/img/avatar.png" alt="Foto da Empresa"/>
+            <img src="/img/user.svg" alt="Foto da Empresa"/>
         </figure>
         <div class="descricao">
         <p>Descrição</p>
