--- a/client/template.html
+++ b/client/template.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login EdUp</title>
+    <link rel="icon" href="img/logo_up.svg"/> 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css"/>
+    <link rel="stylesheet" href="css/"/>
 </head>
-<body>
+<body class="container bg-space">
     
     
-
 </body>
 </html>
